add cloase events

--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
     <!-- <div class="modal__shadow">
         <div class="modal">
             <div class="modal__header">
-                <h1>Alert</h1>
+                <h1 class="modal__header__title">Modal Window</h1>
+            </div>
+            <div class="modal__body">
+                <div class="modal__message">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae ab facere quos, sed quis debitis quaerat dolore delectus vel aspernatur repellat atque. Sed molestiae dolorem rem quia distinctio eligendi blanditiis.
+                </div>
+            </div>
+            <div class="modal__ui">
+                <div class="modal__ui__button modal__ui__button--1">Okay</div>
+                <div class="modal__ui__button modal__ui__button--2">Thanks</div>
             </div>
         </div>
     </div> -->
